// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar tests should match snaphot with label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  padding: 0.5rem;
  border-radius: 100%;
  text-transform: uppercase;
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
  background-color: #323845;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  >
    T
  </div>
</DocumentFragment>
`;

exports[`Avatar tests should match snaphot with pallette 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  padding: 0.5rem;
  border-radius: 100%;
  text-transform: uppercase;
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
  background-color: #323845;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  >
    T
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  padding: 0.5rem;
  border-radius: 100%;
  text-transform: uppercase;
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
  background-color: #CB4242;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  >
    T
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  padding: 0.5rem;
  border-radius: 100%;
  text-transform: uppercase;
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  line-height: 1.25;
  font-variation-settings: 'wght' 92;
  font-size: 0.875rem;
  background-color: #2953B2;
  color: #FFFFFF;
}

<div
    class="emotion-0"
  >
    T
  </div>
</DocumentFragment>
`;
